# pyavaspec

./: README.md  setup.cfg
measurements/FLUORESCENT01/: README.md
measurements/LC-3IR1-G42/: README.md
measurements/LC-3IR2-G42/: README.md
measurements/LC-3IR4-G42/: README.md
measurements/LIGHTBULB01/: README.md
measurements/SZYTF/: README.md
measurements/UNKNWN_3W400/: README.md
measurements/UNKNWN_3W760/: README.md
measurements/UNKNWN_IR001/: README.md
src/pyavaspec/: avacli.py  pyavaspec.py
