[metadata]
name = pyavaspec-tspspi
version = 0.0.2
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Unofficial library and tool to communicate with AvaSpec-2048-2 spectrometer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pyavaspec
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    sdg1032x-tspspi >= 0.0.1a1
    pyusb >= 1.0.2
    matplotlib >= 3.4.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    avacli = pyavaspec.avacli:mainProg
